# minimal_micropython_cmake

./: CMakeLists.txt  README.md  main.c  mpconfigport.h  mphalport.c
